--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "file-loader": "1.1.6",
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
