--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "enzyme-adapter-react-16": "1.1.1",
     "html-webpack-plugin": "2.30.1",
     "jest": "22.0.3",
+    "json-loader": "0.5.7",
     "path": "0.12.7",
     "react-test-renderer": "16.2.0",
     "webpack": "3.10.0",
